--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+
         <activity android:name=".view.Create_Alarm.Create_Alarm">
         </activity>
         <activity android:name=".view.select_company.Select_company" />
@@ -21,20 +22,30 @@
         <activity android:name=".view.create_company.Create_Company" />
         <activity android:name=".view.main.MainActivity">
 
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
+        <intent-filter>
 
 
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+
+                <action android:name="android.intent.action.MAIN" />
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCjGm-3OFR4HVgfweklMJMHUwwf_z-KGSk" />
-<!--        <meta-data-->
-<!--            android:name="com.google.android.gms.version"-->
-<!--            android:value="@integer/google_play_services_version" />-->
+        <!--        <meta-data-->
+        <!--            android:name="com.google.android.gms.version"-->
+        <!--            android:value="@integer/google_play_services_version" />-->
+
+        <activity android:name=".ScheduleDetail" />
+        <activity android:name=".ScheduleDetailSet" />
+        <activity android:name=".ScheduleGroupSet1" />
+        <activity android:name=".ScheduleGroupSet2" />
+        <activity android:name=".ScheduleListSet" />
+
     </application>
 
 </manifest>
